# internal/account/account/handler.go
@@ -19,6 +19,7 @@ func NewHandler(s *Service) *Handler {
 func (h *Handler) MountRoutes(r fiber.Router) {
 
 	r.Post("/signup", h.signup)
+	r.Post("/login", h.Login)
 
 }
 
@@ -39,6 +40,30 @@ func (h *Handler) signup(c *fiber.Ctx) error {
 	}
 
 	res, err := h.Service.Signup(c.Context(), req)
+	if err != nil {
+		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": err.Error()})
+	}
+	return c.Status(fiber.StatusCreated).JSON(res)
+
+}
+
+// @Summary	Login
+// @Description	Login
+// @Tags Account
+// @Accept	json
+// @Produce	json
+// @Param user body Login true "SignUp Request"
+// @Success	200	{object}  LoginResponse
+// @Failure	400	{string}  error  "Bad Request"
+// @Router	/api/v1/account/login [post]
+func (h *Handler) Login(c *fiber.Ctx) error {
+	var req Login
+	err := json.Unmarshal(c.Body(), &req)
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"error": err})
+	}
+
+	res, err := h.Service.Login(c.Context(), req)
 	if err != nil {
 		return c.Status(fiber.StatusUnauthorized).JSON(fiber.Map{"error": err.Error()})
 	}
